--- a/.github/workflows/pyi_linux.yml
+++ b/.github/workflows/pyi_linux.yml
@@ -22,5 +22,5 @@ jobs:
 
     - uses: actions/upload-artifact@v2
       with:
-        name: name-of-artifact
+        name: linux-build
         path: src/dist/linux
