--- a/.github/workflows/pyi_linux.yml
+++ b/.github/workflows/pyi_linux.yml
@@ -23,4 +23,4 @@ jobs:
     - uses: actions/upload-artifact@v2
       with:
         name: linux-build
-        path: src/dist/linux
+        path: src/dist
